# food

./: .env  .gitignore  Cargo.toml  Dioxus.toml  LICENSE  README.md  build.rs  justfile
assets/styling/: main.css
cli/: Cargo.toml
cli/src/: main.rs
crates/models/: Cargo.toml
crates/models/src/: lib.rs
food-backend/: Cargo.toml
food-backend/src/: database.rs  main.rs  models.rs  server.rs
food-backend/src/server/: error.rs
food-backend/tests/: database.rs  server.rs
food-frontend/: Cargo.toml
food-frontend/assets/: styles.css
food-frontend/src/: backend.rs  error.rs  main.rs  mime.rs
migrations/: 20250628122225_init.sql  20250628124724_insert_glass_of_water.sql  20251102120138_add_user.sql
services/auth-service/: Cargo.toml
services/auth-service/src/: lib.rs
services/recipe-service/: Cargo.toml
services/recipe-service/src/: lib.rs  repository.rs
services/recipe-service/tests/: integration_test.rs
services/user-service/: Cargo.toml
services/user-service/src/: lib.rs  repository.rs  user.rs
services/user-service/tests/: integration_test.rs
src/: app.rs  backend.rs  components.rs  database.rs  layouts.rs  lib.rs  main.rs  models.rs  router.rs  server.rs  views.rs
src/api/: recipe.rs  user.rs
src/api/user/: login_form.rs
src/backend/: auth.rs  database.rs  server_state.rs  user.rs
src/backend/auth/: user.rs
src/backend/database/: recipe.rs
src/layouts/: auth_layout.rs  error_layout.rs  navbar_layout.rs
src/views/: home.rs  navbar.rs  not_found.rs  recipes.rs  user.rs
tests/: backend_database.rs  database.rs  server.rs
tests/fixtures/: glass_of_water.sql
