[package]
name = "food"
edition = "2024"
version = "0.1.0"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", default-features = false, features = ["serde"] }
dioxus = { version = "0.7.1", features = ["fullstack", "router"] }
dotenvy = { version = "0.15.7", optional = true }
heck = "0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
# thiserror = "2.0.12"
tokio = { version = "1.46.1", default-features = false, features = [
  "macros",
  "rt-multi-thread",
], optional = true }
tracing = "0.1.41"
# tracing-subscriber = { version = "0.3.19", features = ["env-filter", "parking_lot"] }

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = ["chrono", "macros", "migrate", "runtime-tokio", "sqlite"]
optional = true

[features]
default = ["web", "server"]
web = ["dioxus/web"]
server = ["dioxus/server", "dep:dotenvy", "dep:sqlx", "dep:tokio"]

[[test]]
name = "backend_database"
required-features = ["server"]

[workspace.lints.clippy]
pedantic = "deny"

[profile.dev]
debug = "none"

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
