[workspace]
resolver = "3"
members = ["cli"]

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
# local
food = { path = ".", default-features = false }

# external
anyhow = "1.0.101"
clap = { version = "4.5.57", features = ["derive"] }
dioxus = { version = "0.7.3" }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", default-features = false, features = [
  "macros",
  "rt-multi-thread",
] }

[package]
name = "food"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.101"
async-trait = { version = "0.1.89", optional = true }
axum_session = { version = "0.18.0", optional = true }
axum_session_auth = { version = "0.18.0", optional = true }
axum_session_sqlx = { version = "0.7.0", default-features = false, features = [
  "sqlite",
  "tls-rustls",
], optional = true }
chrono = { version = "0.4.43", default-features = false, features = ["serde"] }
dioxus = { workspace = true, features = ["fullstack", "router", "html"] }
dioxus-html = { version = "0.7.3", features = ["serialize"] }
dotenvy = { version = "0.15.7", optional = true }
heck = "0.5.0"
password-auth = { version = "1.0.0", optional = true, features = ["argon2"] }
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [
  "macros",
  "rt-multi-thread",
], optional = true }
tracing = "0.1.41"

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = ["chrono", "macros", "migrate", "runtime-tokio", "sqlite"]
optional = true

[features]
default = ["web", "server"]
web = ["dioxus/web"]
server = [
  "dioxus/server",
  "dep:async-trait",
  "dep:axum_session",
  "dep:axum_session_auth",
  "dep:axum_session_sqlx",
  "dep:dotenvy",
  "dep:password-auth",
  "dep:sqlx",
  "dep:tokio",
]

[[test]]
name = "backend_database"
required-features = ["server"]

[workspace.lints.clippy]
pedantic = "deny"

[profile.dev]
debug = "none"

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
