[workspace]
resolver = "3"
members = [
    "cli",
    "services/user-service",
    "services/auth-service",
    "services/recipe-service",
    ".",
]

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
# local
food = { path = ".", default-features = false }
auth-service = { path = "services/auth-service" }
recipe-service = { path = "services/recipe-service" }
user-service = { path = "services/user-service" }

# external
anyhow = "1.0.101"
chrono = { version = "0.4.43", default-features = false, features = ["serde"] }
clap = { version = "4.5.57", features = ["derive"] }
dioxus = { version = "0.7.3" }
password-auth = { version = "1.0.0", features = ["argon2"] }
rstest = "0.26.1"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", default-features = false, features = ["chrono", "macros", "migrate", "runtime-tokio", "sqlite"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", default-features = false, features = [
  "macros",
  "rt-multi-thread",
] }
tracing = "0.1.41"

[package]
name = "food"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.101"
async-trait = { version = "0.1.89", optional = true }
axum_session = { version = "0.18.0", optional = true }
axum_session_auth = { version = "0.18.0", optional = true }
axum_session_sqlx = { version = "0.7.0", default-features = false, features = [
  "sqlite",
  "tls-rustls",
], optional = true }
chrono.workspace = true
dioxus = { workspace = true, features = ["fullstack", "router", "html"] }
dioxus-html = { version = "0.7.3", features = ["serialize"] }
dotenvy = { version = "0.15.7", optional = true }
heck = "0.5.0"
password-auth = { workspace = true, optional = true }
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [
  "macros",
  "rt-multi-thread",
], optional = true }
tracing.workspace = true
# Services
auth-service = { workspace = true, optional = true }
recipe-service = { workspace = true, optional = true }
user-service = { workspace = true, optional = true }

[dependencies.sqlx]
workspace = true
optional = true

[features]
default = ["web", "server"]
web = ["dioxus/web"]
server = [
  "dioxus/server",
  "dep:async-trait",
  "dep:axum_session",
  "dep:axum_session_auth",
  "dep:axum_session_sqlx",
  "dep:dotenvy",
  "dep:password-auth",
  "dep:sqlx",
  "dep:tokio",
  "dep:auth-service",
  "dep:recipe-service",
  "dep:user-service",
]

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"

[profile.dev]
debug = "none"

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
