[package]
name = "food-backend"
version = "0.1.0"
edition.workspace = true

[dependencies]
models.workspace = true

anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
serde.workspace = true
sqlx = { version = "0.8.6", default-features = false, features = ["chrono", "macros", "migrate", "runtime-tokio", "sqlite"] }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
http-body-util.workspace = true
serde_json.workspace = true
tower.workspace = true

[lints]
workspace = true
