[package]
name = "food-frontend"
version = "0.1.0"
edition.workspace = true

[dependencies]
models.workspace = true

anyhow.workspace = true
axum.workspace = true
http = "1.3.1"
http-body-util.workspace = true
hyper = { version = "1.6.0", features = ["client"] }
hyper-util = "0.1.15"
maud = { version = "0.27.0", features = ["axum"]}
serde_json.workspace = true
tokio.workspace = true
tower-livereload = "0.9.6"

[lints]
workspace = true
