[package]
name = "food-frontend"
version = "0.1.0"
edition.workspace = true

[dependencies]
models.workspace = true

anyhow.workspace = true
axum.workspace = true
maud = { version = "0.27.0", features = ["axum"]}
reqwest = { version = "0.12.22", default-features = false }
serde_json.workspace = true
tokio.workspace = true
tower-livereload = "0.9.6"

[lints]
workspace = true
