[package]
name = "food-frontend"
version = "0.1.0"
edition.workspace = true

[dependencies]
models.workspace = true

anyhow.workspace = true
axum.workspace = true
maud = { version = "0.27.0", features = ["axum"]}
reqwest = { version = "0.12.22", default-features = false }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-livereload = "0.9.6"
tracing.workspace = true
tracing-subscriber.workspace = true
heck = "0.5.0"

[lints]
workspace = true
